Using margin instead of translateY fixes negative spacing between label and hint
Will need to do cleanup and/or discuss this change with the rest of the engineers, but for now it's fixing the regression

--- a/packages/design-system/src/styles/components/_ChoiceList.scss
+++ b/packages/design-system/src/styles/components/_ChoiceList.scss
@@ -33,17 +33,17 @@ label,
     font-weight: var(--font-weight-normal);
     grid-area: label;
     margin-block-start: 0;
-    max-width: max-content;
 
     // Medicare has a different `translateY` for choice labels
     // If a theme doesn't have a `translateY` for choice labels defined, it will fall back to the normal `translateY`
-    transform: translateY(var(--choice__translateY, 0.25em));
+    margin-top: var(--choice__translateY, 0.25em);
+    max-width: max-content;
   }
 
   // Medicare has a different `translateY` for small choice labels
   // If a theme doesn't have a `translateY` for small choice labels defined, it will fall back to the normal `translateY`
   .ds-c-choice--small + & {
-    transform: translateY(-0.125em);
+    margin-top: -0.125em;
   }
 
   // Disabled label styles
